[package]
name = "rusthtml"
version = "0.2.3"
authors = ["void-life"]
edition = "2018"
description = "A html parser written in rust"
repository = "https://github.com/moelife-coder/rusthtml"
license = "GPL-3.0-only"
keywords = ["html", "parser"]


[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
